file path change in kc_house_note and kc_house_ap

--- a/kc_house_note.ipynb
+++ b/kc_house_note.ipynb
@@ -336,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_raw = pd.read_csv('data//kc_house_data.csv')"
+    "data_raw = pd.read_csv('../data//kc_house_data.csv')"
    ]
   },
   {
@@ -4338,7 +4338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "address = pd.read_csv('data_collect/address_all.csv')\n",
+    "address = pd.read_csv('../data_collect/address_all.csv')\n",
     "address = address.drop_duplicates(subset='id', keep='last')\n",
     "data = df_unique.merge( address, how='inner', on='id',)"
    ]
