added file to Webapp dir

--- a/kc_house_note.ipynb
+++ b/kc_house_note.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,11 +332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_raw = pd.read_csv('../data//kc_house_data.csv')"
+    "data_raw = pd.read_csv('data/kc_house_data.csv')"
    ]
   },
   {
@@ -4334,11 +4334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "address = pd.read_csv('../data_collect/address_all.csv')\n",
+    "address = pd.read_csv('data_collect/address.csv')\n",
     "address = address.drop_duplicates(subset='id', keep='last')\n",
     "data = df_unique.merge( address, how='inner', on='id',)"
    ]
